ExamTips/ingress.yaml
```
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /wear
        pathType: Prefix
        backend:
          serviceName: wear-service
          servicePort: 80
      - path: /watch
        pathType: Prefix
        backend:
          serviceName: watch-service
          servicePort: 80
```
